# PricelessResults

./: README.md
.github/workflows/: rust.yml
backend/: .env  .gitignore  .node-version  Cargo.toml  README.md  run.bat  start_db.bat
backend/src/: main.rs
backend/src/classes/: db_handler.rs  mod.rs  routes.rs
backend/src/database/: mod.rs
backend/src/database/handlers/: class_handler.rs  mod.rs  test_handler.rs  user_handler.rs
backend/src/database/interfaces/: class_interface.rs
backend/src/db/: mod.rs  surrealdb_connection.rs
backend/src/db/connection/: mod.rs  surrealdb_connection.rs
backend/src/db/handlers/: class_handler.rs  mod.rs  score_handler.rs  session_handler.rs  test_handler.rs  test_statistics_handler.rs  user_handler.rs
backend/src/db/interfaces/: class_interface.rs  common.rs  mod.rs  score_interface.rs  session_interface.rs  test_interface.rs  test_statistics_interface.rs  user_interface.rs
backend/src/db/shared/: json_traits.rs  mod.rs
backend/src/score/: routes.rs
backend/src/statistics/: routes.rs
backend/src/user/: db_handler.rs  mod.rs  routes.rs  user.rs
backend/src/user_tests/: routes.rs
frontend/: .env  .env.production  .gitignore  package.json  pnpm-lock.yaml  tsconfig.json  uno.config.ts  vite.config.ts
frontend/public/: manifest.webmanifest
frontend/src/: charts.tsx  env.d.ts  main.css  root.tsx
frontend/src/components/: Navbar.tsx  types.d.ts
frontend/src/context/: NavbarProvider.tsx  ThemeProvider.tsx  UserProvider.tsx
frontend/src/helpers/: types.d.ts
frontend/src/routes/: [...404].tsx  admin.tsx  (+2 more)
(+44 files in other folders)
