
[package]
name = "priceless_results_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0.164", features = ["derive"] }
futures = "0.3"
surrealdb = { git = "https://github.com/surrealdb/surrealdb.git", tag = "v1.0.0-beta.9" }
env_logger = "0.10.0"
dotenv = "0.15.0"
google-oauth = "1.1.0"
actix-cors = "0.6.4"
rand = "0.8.5"
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
chrono = "0.4.26"
